# mmdflux

./: .gitignore  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  PR.md  README.md  boundaries.toml  bug.md  bug2.md  codebook.toml  cog.toml  cspell.config.yaml  guide.md  mise.toml  opencode.json  rust-toolchain.toml  test.mmd  test2.mmd
.agents/skills/test/: SKILL.md
.agents/skills/verify/: SKILL.md
.claude/: settings.json
.claude/hooks/: check-architecture.sh  start-architecture-watch.sh  stop-architecture-watch.sh
.codex/: config.toml  hooks.json
.codex/environments/: environment.toml
.codex/hooks/: check-architecture-on-stop.sh  snapshot-rust-status.sh  start-architecture-watch.sh
.config/: nextest.toml
.cspell/: codebook.txt  cspell-words.txt
.github/workflows/: ci.yml  commit-check.yml  crate-release.yml  packages-ci.yml  packages-release.yml  playground-ci.yml  playground-deploy.yml  release-plan.yml  release.yml  wasm-ci.yml  wasm-release.yml
.zed/: tasks.json
crates/mmdflux-wasm/: Cargo.toml
crates/mmdflux-wasm/src/: lib.rs
crates/mmdflux-wasm/tests/: web.rs
data/font-metrics/: mmdflux-sans-v1.json
docs/: edge-routing-heuristics.md  gallery.md  mmds.md  mmds.schema.json
docs/architecture/: deferred-friction.md  dependency-rules.md  routing-style-vs-edge-routing.md
docs/development/: mermaid-parity.md  readme-assets.md  releasing.md  setup.md  wasm.md
examples/: commands_events_views.rs  materialized_view.rs  mmds_replay.rs  snapshot_diff.rs
rl/: notes.md  simple.md  simple.mmd  state_diagram.md
scripts/: check-wasm-size.sh  compare-mermaid.sh  generate-gallery.sh  refresh-readme-assets.sh  run-release-plan.sh  setup-debug-deps.sh  sync-cspell-dictionary.mjs  view
scripts/module-deps/: c4.mjs  core.mjs  flowchart.mjs  pivot.mjs  scc.mjs
src/: builtins.rs  cli_svg_theme_auto.rs  commands.rs  lib.rs  main.rs  payload.rs  svg_theme_auto.rs  terminal_appearance.rs  test_tracing.rs
src/diagrams/: mod.rs
src/graph/: attachment.rs  diagram.rs  direction_policy.rs  edge.rs  edge_marker.rs  geometry.rs  label_wrap.rs  measure.rs  mod.rs  node.rs  style.rs
src/internal_tests/: composition_probe.rs  cross_pipeline.rs  event_change_mapping.rs  graph_routing_pipeline.rs  grid_routing_regression.rs  label_node_overlap.rs  layered_adapter_pipeline.rs  layered_kernel_bend.rs  mmds_commands.rs  mmds_diff.rs  mmds_document_serialization.rs  mmds_output_serialization.rs  mod.rs  port_attachment_observation.rs  render_time_placer.rs  sequence_layout.rs  singleton_centering_observation.rs  stub_metrics.rs  svg_render_pipeline.rs  text_render_pipeline.rs  wrap_pipeline.rs
src/mermaid/: ast.rs  flowchart.rs  grammar.pest  mod.rs  theme_hint.rs
src/mmds/: commands.rs  detect.rs  diff.rs  document.rs  events.rs  hydrate.rs  mermaid.rs  mod.rs  output.rs  parse.rs  regression_tests.rs  sequence.rs  token.rs
src/render/: mod.rs
src/runtime/: config.rs  config_input.rs  dynamic_text_metrics.rs  graph_family.rs  mmds.rs  mod.rs  payload.rs  timeline_family.rs
src/views/: apply.rs  error.rs  evaluate.rs  events.rs  mod.rs  project.rs  spec.rs
tests/: class_instance.rs  cli.rs  compliance_class.rs  compliance_flowchart.rs  compliance_sequence.rs  compliance_state.rs  diagram_traits.rs  edge_style.rs  elk_integration.rs  engine_registry.rs  flowchart_instance.rs  greedy_switch_quality.rs  integration.rs  integration_full.rs  json_output.rs  lib_exports.rs  lint_cli.rs  mmds_cli_integration.rs  mmds_commands.rs  mmds_conformance.rs  mmds_diff.rs  mmds_json.rs  mmds_roundtrip.rs  mmds_views.rs  registry_regression.rs  render_format.rs  runtime_facade.rs  runtime_graph_dispatch.rs  sequence_instance.rs  svg_render.rs  svg_snapshots.rs  wasm_cli_contract.rs
tests/common/: mod.rs
web/: README.md  package-lock.json
web/scripts/: benchmark-compare.ts  benchmark-smoke.ts
web/src/: browser-text-metrics.test.ts  browser-text-metrics.ts  editor.ts  main-thread-browser-text-metrics.test.ts  main.test.ts  main.ts  mermaid-language.ts  preview.ts  render-client.test.ts  wasm-diagnostics.ts  wasm-module.ts  worker-protocol.ts  worker.test.ts  worker.ts
web/styles/: main.css
web/tests/: benchmark-compare.test.ts  benchmark-metrics.test.ts  examples.test.ts  state-persistence.test.ts  ui-controls.test.ts
xtask/: Cargo.toml
xtask/docs/: architecture.md
xtask/font_metrics/fonts/liberation-sans-regular/: LICENSE  PROVENANCE.md
xtask/font_metrics/profiles/: mmdflux-sans-v1.toml
xtask/src/: font_metrics.rs  lint.rs  main.rs  readme_assets.rs  text_metrics_churn.rs
xtask/src/architecture/: boundaries.rs  explain.rs  graph_output.rs  host.rs  json_output.rs  mod.rs  policy.rs  rules_eval.rs  watch.rs
xtask/tests/: architecture_boundaries_cli.rs  architecture_watch_cli.rs  text_metrics_default_churn_cli.rs
xtask/tests/fixtures/architecture-policy/: invalid-exception-missing-rule-id.toml  invalid-exception-unknown-boundary.toml  invalid-layers-duplicate.toml  invalid-rule-shape.toml  invalid-tag-no-match.toml  invalid-unknown-boundary.toml  invalid-unknown-type.toml  invalid-version.toml  v2-minimal.toml  v2-tag-targeting.toml  v2-tags-and-exceptions.toml
(+324 files in other folders)
