[package]
name = "mmdflux"
version = "2.0.1"
edition = "2024"
default-run = "mmdflux"
description = "Render Mermaid diagrams as Unicode text, ASCII, SVG, and MMDS JSON."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kevinswiber/mmdflux"
exclude = ["tests/"]
homepage = "https://github.com/kevinswiber/mmdflux"
documentation = "https://docs.rs/mmdflux"
keywords = ["mermaid", "diagram", "cli", "svg", "text"]

[workspace]
members = ["crates/mmdflux-wasm", "xtask"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
# Keep CLI behavior by default while allowing library/WASM users to opt out.
default = ["cli"]
# CLI-only dependency surface.
cli = ["dep:clap"]
engine-elk = []

[[bin]]
name = "mmdflux"
path = "src/main.rs"
# Prevent compiling the CLI binary when `clap` is intentionally excluded.
required-features = ["cli"]

[dev-dependencies]
assert_cmd = "2"
jsonschema = "0.41"
predicates = "3"
regex = "1.12.2"
