[package]
name = "xtask"
version = "2.4.0"
edition = "2024"
publish = false

[dependencies]
annotate-snippets = "0.12.13"
anyhow = "1"
ctrlc = "3"
notify = "8"
ra_ap_cfg = "=0.0.328"
ra_ap_hir = "=0.0.328"
ra_ap_ide = "=0.0.328"
ra_ap_ide_db = "=0.0.328"
ra_ap_load-cargo = "=0.0.328"
ra_ap_paths = "=0.0.328"
ra_ap_project_model = "=0.0.328"
ra_ap_syntax = "=0.0.328"
ra_ap_vfs = "=0.0.328"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["std", "fmt", "ansi", "env-filter", "json"] }
