[package]
name = "mmdflux-wasm"
version = "2.4.2"
edition = "2024"
description = "wasm-bindgen bindings for mmdflux"
license = "MIT"
repository = "https://github.com/kevinswiber/mmdflux"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
mmdflux = { path = "../..", default-features = false, features = ["unstable-text-metrics-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
